tests/base/invalid/RealDiv_CompileFail_1.whiley
import * from whiley.lang.*

void ::main(System sys,[string] args):
    ls = [1,2,3]
    x = 2.0 / 1
    sys.out.println(toString(ls)[x])
